0.5.0/_sources/guides/_viewer_events.md
                                                                                                                                                                                                                                                                                                                                                       
|  Event                               |  Description                                                                                                                                                                                                                                                                       |  Event.value type       |
|--------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------|
|  `viewer.camera.events.center`       |  Center of rotation for the camera. In 2D viewing the last two values are used.                                                                                                                                                                                                    |  `Union`                |
|  `viewer.camera.events.zoom`         |  Scale from canvas pixels to world pixels.                                                                                                                                                                                                                                         |  `float`                |
|  `viewer.camera.events.angles`       |  Euler angles of camera in 3D viewing (rx, ry, rz), in degrees. Only used during 3D viewing. Note that Euler angles's intrinsic degeneracy means different sets of Euler angles may lead to the same view.                                                                         |  `tuple`                |
|  `viewer.camera.events.perspective`  |  Perspective (aka "field of view" in vispy) of the camera (if 3D).                                                                                                                                                                                                                 |  `float`                |
|  `viewer.camera.events.mouse_pan`    |  If the camera interactive panning with the mouse is enabled or not.                                                                                                                                                                                                               |  `bool`                 |
|  `viewer.camera.events.mouse_zoom`   |  If the camera interactive zooming with the mouse is enabled or not.                                                                                                                                                                                                               |  `bool`                 |
|  `viewer.cursor.events.position`     |  Position of the cursor in world coordinates. None if outside the world.                                                                                                                                                                                                           |  `float`                |
|  `viewer.cursor.events.scaled`       |  Flag to indicate whether cursor size should be scaled to zoom. Only relevant for circle and square cursors which are drawn with a particular size.                                                                                                                                |  `bool`                 |
|  `viewer.cursor.events.style`        |  Style of the cursor. Must be one of     * square: A square     * circle: A circle     * cross: A cross     * forbidden: A forbidden symbol     * pointing: A finger for pointing     * standard: The standard cursor     # crosshair: A crosshair                                 |  `CursorStyle`          |
|  `viewer.cursor.events.size`         |  Size of the cursor in canvas pixels. Only relevant for circle and square cursors which are drawn with a particular size.                                                                                                                                                          |  `float`                |
|  `viewer.dims.events.ndim`           |  Number of dimensions.                                                                                                                                                                                                                                                             |  `int`                  |
|  `viewer.dims.events.ndisplay`       |  Number of displayed dimensions.                                                                                                                                                                                                                                                   |  `Literal`              |
|  `viewer.dims.events.order`          |  Tuple of ordering the dimensions, where the last dimensions are rendered.                                                                                                                                                                                                         |  `int`                  |
|  `viewer.dims.events.axis_labels`    |  Tuple of labels for each dimension.                                                                                                                                                                                                                                               |  `str`                  |
|  `viewer.dims.events.rollable`       |  Tuple of axis roll state. If True the axis is rollable.                                                                                                                                                                                                                           |  `bool`                 |
|  `viewer.dims.events.range`          |  List of tuples (min, max, step), one for each dimension in world coordinates space. Lower and upper bounds are inclusive.                                                                                                                                                         |  `RangeTuple`           |
|  `viewer.dims.events.margin_left`    |  Left margin in world pixels of the slice for each dimension.                                                                                                                                                                                                                      |  `float`                |
|  `viewer.dims.events.margin_right`   |  Right margin in world pixels of the slice for each dimension.                                                                                                                                                                                                                     |  `float`                |
|  `viewer.dims.events.point`          |  Dims position in world coordinates for each dimension.                                                                                                                                                                                                                            |  `float`                |
|  `viewer.dims.events.last_used`      |  Dimension which was last interacted with.                                                                                                                                                                                                                                         |  `int`                  |
|  `viewer.grid.events.stride`         |  Number of layers to place in each grid square before moving on to the next square. The default ordering is to place the most visible layer in the top left corner of the grid. A negative stride will cause the order in which the layers are placed in the grid to be reversed.  |  `ConstrainedIntValue`  |
|  `viewer.grid.events.shape`          |  Number of rows and columns in the grid. A value of -1 for either or both of will be used the row and column numbers will trigger an auto calculation of the necessary grid shape to appropriately fill all the layers at the appropriate stride.                                  |  `tuple`                |
|  `viewer.grid.events.enabled`        |  If grid is enabled or not.                                                                                                                                                                                                                                                        |  `bool`                 |
|  `viewer.tooltip.events.visible`     |  If tooltip is visible or not.                                                                                                                                                                                                                                                     |  `bool`                 |
|  `viewer.tooltip.events.text`        |  text of tooltip                                                                                                                                                                                                                                                                   |  `str`                  |
|  `viewer.events.help`                |                                                                                                                                                                                                                                                                                    |  `str`                  |
|  `viewer.events.status`              |                                                                                                                                                                                                                                                                                    |  `Union`                |
|  `viewer.events.theme`               |                                                                                                                                                                                                                                                                                    |  `str`                  |
|  `viewer.events.title`               |  The title of the viewer window.                                                                                                                                                                                                                                                   |  `str`                  |
|  `viewer.events.mouse_over_canvas`   |                                                                                                                                                                                                                                                                                    |  `bool`                 |
|  `viewer.events.help`                |                                                                                                                                                                                                                                                                                    |  `str`                  |
|  `viewer.events.status`              |                                                                                                                                                                                                                                                                                    |  `Union`                |
|  `viewer.events.theme`               |                                                                                                                                                                                                                                                                                    |  `str`                  |
|  `viewer.events.title`               |  The title of the viewer window. By default 'napari'.                                                                                                                                                                                                                              |  `str`                  |
|  `viewer.events.mouse_over_canvas`   |                                                                                                                                                                                                                                                                                    |  `bool`                 |
                                                                                                                                                                                                                                                                                                                                                       